//
//  ChoicesText.swift
//  SmokeOrFire
//
//  Created by Justin Lawrence Hester on 8/14/16.
//  Copyright © 2016 Justin Lawrence Hester. All rights reserved.
//

enum ChoicesText: String {
    case HEART = "HEART"
    case CLUB = "CLUB"
    case DIAMOND = "DIAMOND"
    case SPADE = "SPADE"
    case RED = "FIRE"
    case BLACK = "SMOKE"
    case HIGHER = "HIGHER"
    case LOWER = "LOWER"
    case INSIDE = "INSIDE"
    case OUTSIDE = "OUTSIDE"
    case SAME = "SAME"
    case PYRAMID = "?"
    case GUESS = "guess the card"

}
